--- a/package.json
+++ b/package.json
@@ -10,14 +10,24 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@emailjs/browser": "3.11.0",
-    "@react-spring/three": "9.7.4",
-    "@react-three/drei": "9.122.0",
-    "@react-three/fiber": "8.18.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-router-dom": "7.3.0",
-    "three": "0.160.0"
+    "@emailjs/browser": "^3.11.0",
+    "@react-spring/three": "^9.7.3",
+    "@react-three/drei": "^9.88.2",
+    "@react-three/fiber": "^8.14.5",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.17.0",
+    "react-vertical-timeline-component": "^3.6.0",
+    "three": "^0.157.0",
+    
+    "@gsap/react": "^2.1.1",
+    "@types/three": "^0.168.0",
+    "gsap": "^3.12.5",
+    "leva": "^0.9.35",
+    "maath": "^0.10.8",
+    "react-globe.gl": "^2.27.2",
+    "react-responsive": "^10.0.0",
+    "three-stdlib": "^2.32.2"
   },
   "devDependencies": {
     "@types/react": "18.2.15",
