--- a/package.json
+++ b/package.json
@@ -11,22 +11,25 @@
   },
   "dependencies": {
     "@emailjs/browser": "^3.11.0",
+    "@gsap/react": "^2.1.1",
     "@react-spring/three": "^9.7.3",
     "@react-three/drei": "^9.88.2",
     "@react-three/fiber": "^8.14.5",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.17.0",
-    "react-vertical-timeline-component": "^3.6.0",
-    "three": "^0.157.0",
-    
-    "@gsap/react": "^2.1.1",
+    "@react-three/postprocessing": "^3.0.4",
     "@types/three": "^0.168.0",
+    "framer-motion": "^12.23.26",
     "gsap": "^3.12.5",
     "leva": "^0.9.35",
     "maath": "^0.10.8",
+    "matter-js": "^0.20.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-error-boundary": "^6.0.0",
     "react-globe.gl": "^2.27.2",
     "react-responsive": "^10.0.0",
+    "react-router-dom": "^6.17.0",
+    "react-vertical-timeline-component": "^3.6.0",
+    "three": "^0.157.0",
     "three-stdlib": "^2.32.2"
   },
   "devDependencies": {
