--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-dom": "^18.2.0",
     "react-error-boundary": "^6.0.0",
     "react-globe.gl": "^2.27.2",
+    "react-icons": "^5.5.0",
     "react-responsive": "^10.0.0",
     "react-router-dom": "^6.17.0",
     "react-vertical-timeline-component": "^3.6.0",
