--- a/package.json
+++ b/package.json
@@ -17,11 +17,14 @@
     "@react-three/fiber": "^8.14.5",
     "@react-three/postprocessing": "^3.0.4",
     "@types/three": "^0.168.0",
+    "clsx": "^2.1.1",
     "framer-motion": "^12.23.26",
-    "gsap": "^3.12.5",
+    "gsap": "^3.14.2",
     "leva": "^0.9.35",
+    "lucide-react": "^0.562.0",
     "maath": "^0.10.8",
     "matter-js": "^0.20.0",
+    "motion": "^12.23.26",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-error-boundary": "^6.0.0",
@@ -30,6 +33,7 @@
     "react-responsive": "^10.0.0",
     "react-router-dom": "^6.17.0",
     "react-vertical-timeline-component": "^3.6.0",
+    "tailwind-merge": "^3.4.0",
     "three": "^0.157.0",
     "three-stdlib": "^2.32.2"
   },
